Fix flickering issues when clicking the hamburger

--- a/src/scss/components/hamburger.scss
+++ b/src/scss/components/hamburger.scss
@@ -1,7 +1,7 @@
 /* Fades in the dark background */
 .darkenbg {
   opacity: 0.4 !important;
-  z-index: 5 !important;
+  z-index: 30 !important;
 }
 
 #darkenbackground {
